Fix weird overflow behavior

--- a/helper.scss
+++ b/helper.scss
@@ -35,6 +35,7 @@ html, body {
 
 html {
     font-size: var(--font-size-base);
+    overflow: clip;
 }
 
 body {
